application: Handle --version from the command line

https://bugzilla.gnome.org/show_bug.cgi?id=760796